--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,14 +1,7 @@
-ignore.path=
-include.path=\
-    ${php.global.include.path}
+include.path=${php.global.include.path}
 php.version=PHP_53
-phpunit.bootstrap=
-phpunit.bootstrap.create.tests=false
-phpunit.configuration=
-phpunit.suite=
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=true
-test.src.dir=/Applications/MAMP/htdocs/scitec/tests
-web.root=public
+web.root=.
