Conectado con la bd
La aplicación se ha conectado con la base de datos que actualmente se esta usando...

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -11,7 +11,7 @@ resources.db.adapter = PDO_MYSQL
 resources.db.params.host = localhost
 resources.db.params.username = root
 resources.db.params.password = root
-resources.db.params.dbname = sc_dataBase1.0
+resources.db.params.dbname = SCiTEC
 resources.view.doctype = "XHTML1_STRICT"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 
