--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -10,8 +10,8 @@ resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.db.adapter = PDO_MYSQL
 resources.db.params.host = localhost
 resources.db.params.username = root
-resources.db.params.password = root
-resources.db.params.dbname = SCiTEC
+resources.db.params.password = 
+resources.db.params.dbname = scitec
 resources.view.doctype = "XHTML1_STRICT"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 
